...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RZ2-1j-Q2y">
                                <rect key="frame" x="305" y="55" width="89" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="Ih5-If-BLD"/>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="89" id="dfZ-DE-L2C"/>
                                </constraints>
                                <state key="normal" title="Search Artist"/>
                                <connections>
                                    <action selector="searchButtonTapped:" destination="9jI-gR-A97" eventType="touchUpInside" id="eji-Rc-EuR"/>
                                </connections>
                            </button>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qxs-GM-czs">
                                <rect key="frame" x="-9" y="132" width="423" height="730"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                            </tableView>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Artist Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CY5-RF-zeg">
                                <rect key="frame" x="20" y="51" width="277" height="34"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="34" id="REZ-13-k3Y"/>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="277" id="RoZ-J9-n42"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
