//
//  Constants.swift
//  GM Coding Exercise
//
//  Created by Derek on 2/19/21.
//

import Foundation

class Constants{
    static let nibName = "TableViewCell"
}


//app/*@START_MENU_TOKEN@*/.buttons["Done"]/*[[".keyboards",".buttons[\"done\"]",".buttons[\"Done\"]"],[[[-1,2],[-1,1],[-1,0,1]],[[-1,2],[-1,1]]],[0]]@END_MENU_TOKEN@*/.tap() 29 42
